After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 781789 - playback/player: qt: Use QApplication instead of QGuiApplication
playback/player: qt: Use QApplication instead of QGuiApplication
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-examples
git master
Other Linux
: Normal normal
: git master
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2017-04-26 18:07 UTC by Carlos Rafael Giani
Modified: 2017-04-27 09:28 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
qt player qapplication fix (973 bytes, patch)
2017-04-26 18:09 UTC, Carlos Rafael Giani
committed Details | Review

Description Carlos Rafael Giani 2017-04-26 18:07:57 UTC
This avoids the following fatal error which happens with some Qt5 versions:
    
"QWidget: Cannot create a QWidget without QApplication"
Comment 1 Carlos Rafael Giani 2017-04-26 18:09:02 UTC
Created attachment 350500 [details] [review]
qt player qapplication fix
Comment 2 Sebastian Dröge (slomo) 2017-04-27 09:28:20 UTC
commit 175f7c8da198eeed028caf544cbbb817e1718f92
Author: Carlos Rafael Giani <dv@pseudoterminal.org>
Date:   Wed Apr 26 20:08:19 2017 +0200

    playback/player: qt: use QApplication instead of QGuiApplication
    
    This avoids the following fatal error:
    
    "QWidget: Cannot create a QWidget without QApplication"
    
    https://bugzilla.gnome.org/show_bug.cgi?id=781789