playback/player: qt: use QApplication instead of QGuiApplication

This avoids the following fatal error:

"QWidget: Cannot create a QWidget without QApplication"

https://bugzilla.gnome.org/show_bug.cgi?id=781789